Improve error handling in packets.